[package]
name = "banners"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging"] }
webpki-roots = "0.26"
x509-parser = "0.15"
url = "2"
